<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Home">

    <ImageView
        android:id="@+id/iv_main_banner"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/banner" />

    <ScrollView
        android:id="@+id/sv_home_contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_banner"
        app:layout_constraintBottom_toTopOf="@id/ll_home_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_home_saludo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:text="@string/hola"
                android:textColor="@color/secondaryColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_home_nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="FerLima"
                android:textColor="@color/primaryColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_saludo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="200dp"
                android:layout_marginBottom="28dp"
                android:background="@color/primaryColor"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark"
                app:layout_constraintBottom_toTopOf="@+id/tv_home_populares"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_home_nombre_usuario" />

            <TextView
                android:id="@+id/tv_home_populares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_home_populares"
                android:textColor="@color/secondaryColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_nombre_usuario" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_home_carousel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_populares">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/libro_1" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/libro_2" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:srcCompat="@drawable/libro_1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/libro_2" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/libro_1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_home_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_home_carousel">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/tv_home_libros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libros"
                        android:textColor="@color/primaryColor"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_home_divider_one"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_home_divider_one"
                        android:layout_width="2dp"
                        android:layout_height="0dp"
                        android:background="@color/primaryColor"
                        android:src="@android:drawable/divider_horizontal_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_home_categorias"
                        app:layout_constraintHorizontal_bias="0.742"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_home_categorias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categorias"
                        android:textColor="@color/primaryColor"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_home_divider_two"
                        android:layout_width="2dp"
                        android:layout_height="0dp"
                        android:background="@color/primaryColor"
                        android:src="@android:drawable/divider_horizontal_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.23"
                        app:layout_constraintStart_toEndOf="@+id/tv_home_categorias"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_home_autores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/autores"
                        android:textColor="@color/primaryColor"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_home_divider_two"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_home_Recien_agregados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/recien_agregados"
                android:textColor="@color/secondaryColor"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_home_filters" />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rv_home_libros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_Recien_agregados" />

            <ProgressBar
                android:id="@+id/pb_home_rv_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_Recien_agregados"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_home_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconTint="@color/secondaryColor"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_navegation" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>